--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -4835,7 +4835,7 @@ h3{
 		&__part{
 			margin-bottom: 15px;
 			&:hover{
-				background: none;
+				background: transparent;
 				i{
 					filter: none;
 				}
