--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -4840,6 +4840,9 @@ h3{
 					filter: none;
 				}
 			}
+			&_active{
+				background: #3b205c !important;
+			}
 		}
 		.slick-slide{
 			text-align: center;
