--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -5548,6 +5548,18 @@ h3 {
   .constructor__part img {
     zoom: 0.8;
   }
+  .constructor__part:hover {
+    background: transparent;
+  }
+  .constructor__part:hover i {
+    filter: none;
+  }
+  .constructor__part_active {
+    background: #3b205c !important;
+  }
+  .constructor__part_active i {
+    filter: brightness(2) !important;
+  }
   .constructor__top {
     flex-wrap: wrap;
   }
@@ -5556,6 +5568,13 @@ h3 {
   }
   .constructor .slick-slide {
     text-align: center;
+  }
+
+  .kalitem:hover img {
+    display: none;
+  }
+  .kalitem__title img {
+    display: block !important;
   }
 
   .constselected__item {
@@ -5866,6 +5885,9 @@ h3 {
   }
   .constructor__part_active {
     background: #3b205c !important;
+  }
+  .constructor__part_active i {
+    filter: brightness(2) !important;
   }
   .constructor .slick-slide {
     text-align: center;
