--- a/smoky/scss/layout/_footer.scss
+++ b/smoky/scss/layout/_footer.scss
@@ -198,6 +198,8 @@ footer{
     		min-width: 100%;
     		flex-wrap: wrap;
     		justify-content: center;
+    		flex-direction: column;
+    		align-items: center;
     	}
     	&__box{
     		text-align: center;
@@ -211,6 +213,10 @@ footer{
 	.fmenu{
 		&__title{
 			min-height: auto;
+			display: none;
+		}
+		ul{
+			display: none;
 		}
 	}
 	.disclaimer{
