--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -21,6 +21,9 @@ header{
 		box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.22);
 		position: relative;
 	}
+	.mobside{
+    	display: none;
+    }
 	&__side{
 		display: none;
 		i{
@@ -30,11 +33,17 @@ header{
 	&__logo{
 		width: 275px;
     	text-align: center;
+    	&_mob{
+    		display: none;
+    	}
 	}
 	&__cont{
 		margin-right: 37px;
 		padding-left: 3px;
 		padding-bottom: 3px;
+		i{
+			display: none;
+		}
 	}
 	&__phone{
 		display: flex;
@@ -250,6 +259,12 @@ header{
 			}
 		}
 	}
+	&__object{
+    	display: block;
+    	&_mob{
+    		display: none;
+    	}
+    }
 }
 .loginpop,.registerpop{
 	position: absolute;
@@ -609,11 +624,79 @@ header{
     		justify-content: center;
     		box-shadow: 0px 0px 0 0;
 		}
+		&__cont{
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			i{
+				display: block;
+    			font-size: 30px;
+    			color: #3a424b;
+    			margin-right: 10px;
+			}
+		}
+		&__logo{
+			width: 200px;
+			margin-right: 10px;
+		}
+		&__info{
+			display: none;
+		}
 		&__side{
-			display: block;
-		    position: absolute;
-		    top: 15px;
-		    right: 48px;
+			display: none;
+		}
+	}
+	.mobside{
+		padding: 20px 0;
+		width: 288px;
+		background: #fff;
+		position: absolute;
+		top: 105px;
+		left: 0;
+		z-index: 15;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+		height: calc(100vh - 62px);
+    	overflow-y: scroll;
+		&_nav{
+			li{
+				display: block;
+				border-bottom: 1px solid #f2f2f2;
+				padding: 12px 0;
+				margin: 0 20px;
+				&:last-child{
+					border-bottom: 0;
+				}
+			}
+			a{
+				font-family: 'Roboto', sans-serif;
+    			font-size: 14px;
+    			font-weight: 700;
+    			color: #7f7f7f
+			}
+			&_toggle{
+				display: flex !important;
+				justify-content: space-between;
+				align-items: center;
+				i{
+					color: #7f7f7f;
+					font-size: 16px;
+					margin-right: 7px;
+				}
+				&_active{
+					i{
+						transform: rotate(180deg);
+					}
+				}
+			}
+		}
+	}
+	.search{
+		margin-bottom: 5px;
+		padding: 0 20px;
+		&__box{
+			input{
+				width: 210px;
+			}
 		}
 	}
 	.htabs{
@@ -627,47 +710,180 @@ header{
 
 @media screen and (max-width: 767px) {
 	.header{
-		margin-top: 52px;
+		/*margin-top: 52px;*/
+		position: fixed;
+		width: 100%;
+		top: 0;
+		left: 0;
 		.wrapper{
 			min-width: 100%;
     		max-width: 100%;
-    		flex-direction: column;
+    		flex-direction: row;
+    		justify-content: space-between;
+    		align-items: center;
+    		padding: 7px 15px;
+    		border-bottom: 2px solid #a91c5f;
 		}
 		&__logo{
-			margin: 0 auto;
-    		margin-bottom: 7px;
+			display: none;
+			&_mob{
+				display: block;
+				margin: 0 auto;
+				margin-top: 15px;
+				img{
+					width: 170px;
+				}
+			}
+		}
+		&__toogle{
+			margin-right: 10px;
 		}
 		&__cont{
 			margin-right: 0;
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			i{
+				color: #000;
+    			font-size: 25px;
+    			display: block;
+			}
+		}
+		&__phone{
+			margin-bottom: 0;
+			a{
+				color: #000;
+				font-size: 15px;
+			}
 		}
 		&__time{
+			margin-bottom: 0;
 			p{
 				padding-left: 0;
 				text-align: center;
+				color: #000;
+				font-size: 8px;
 				br{
 					display: none;
 				}
 			}
 		}
 		&__call{
-			margin-bottom: 10px;
+			margin-bottom: 0;
     		display: inline-block;
+    		color: #000;
+    		font-size: 10px;
+    		font-weight: 500;
+    		padding-bottom: 2px;
+    		span{
+    			display: none;
+    		}
 		}
 		&__info{
 			margin-right: 0;
-		}
-		&__side{
 			display: none;
+		}
+		/*&__side{
+			display: none;
+		}*/
+	}
+	.mobside{
+		padding: 20px 0;
+		width: 288px;
+		background: #fff;
+		position: fixed;
+		top: 62px;
+		left: 0;
+		z-index: 15;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+		height: calc(100vh - 62px);
+    	overflow-y: scroll;
+		&_nav{
+			li{
+				display: block;
+				border-bottom: 1px solid #f2f2f2;
+				padding: 12px 0;
+				margin: 0 20px;
+				&:last-child{
+					border-bottom: 0;
+				}
+			}
+			a{
+				font-family: 'Roboto', sans-serif;
+    			font-size: 14px;
+    			font-weight: 700;
+    			color: #7f7f7f
+			}
+			&_toggle{
+				display: flex !important;
+				justify-content: space-between;
+				align-items: center;
+				i{
+					color: #7f7f7f;
+					font-size: 16px;
+					margin-right: 7px;
+				}
+				&_active{
+					i{
+						transform: rotate(180deg);
+					}
+				}
+			}
 		}
 	}
 	.search{
 		margin-bottom: 5px;
+		padding: 0 20px;
+		&__box{
+			input{
+				width: 210px;
+			}
+		}
 	}
 	.htabs{
 		justify-content: space-between;
-    	width: 100%;
+    	width: auto;
     	&__item{
-    		width: 25%;
+    		width: auto;
+    		border: 0;
+    		height: auto;
+    		margin-left: 7px;
+    		p{
+    			display: none;
+    		}
+    		&_4{
+    			.htabs__img span{
+    				top: 4px;
+    				left: 13.5px;
+    			}
+    		}
+    	}
+    	&__img{
+    		height: auto;
+    		span{
+    			color: #000;
+    		}
+    		&_1{
+    			span{
+    				top: 8px;
+    			}
+    		}
+    		&_2{
+    			span{
+    				top: 3px;
+    			}
+    		}
+    		&_active{
+    			span{
+    				color: #000;
+    			}
+    		}
+    	}
+    	&__object{
+    		display: none;
+    		&_mob{
+    			display: block;
+    		}
     	}
 	}
 }
