--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -27,6 +27,12 @@
 	margin: 0 auto;
 	position: relative;
 }
+[type="number"]::-webkit-inner-spin-button { 
+  display: none;
+}
+[type="number"]{
+	-moz-appearance: textfield;
+}
 
 /* titles */
 p{	
